MDEV-9503 Server crashes in fix_fields, main.null fails with ps-protocol DBUG_ASSERT() added in the patch for MDEV-9181 did not take into account special circumstances for the prepared statement EXECUTE. Fixig the assert. Also, extending and fixing comments made during MDEV-9181.